--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-  <p>This is first paragraph</p>
   <h1>This is a heading</h1>
   <p>This is a paragraph</p>
+  <p>This is first paragraph</p>
+  <p>This is paragraph-a</p>
   <p>This is paragraph-b</p>
 </body>
 
