--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
   <p>This is first paragraph</p>
+  <h1>This is a heading</h1>
+  <p>This is a paragraph</p>
+  <p>This is paragraph-b</p>
 </body>
 
 </html>
